--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             content="Computer Science Student, Aspiring Software and Front End Developer">
         <meta name="keywords" content="design, development, web, akshantjain, akshant, jain, software, student, senior">
 
-        <title>Akshant Jain | Software and Front End Developer</title>
+        <title>Akshant Jain | Developer</title>
 
         <!-- Bootstrap core CSS -->
         <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
