--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@ permalink: /404.html
                     <div class="alert" role="alert">
                         <span class="text-uppercase mb-2" style="font-size: 2rem;">Page Not Found!</span> 
                         <br><br>
-                        <span style="font-size: 1.2rem;">Visit my <a href="#" class="alert-link">homepage</a>. Give it a click if you like.</span>
+                        <span style="font-size: 1.2rem;">Visit my <a href="https://akshantjain.github.io" class="alert-link">homepage</a>. Give it a click if you like.</span>
                     </div>
                 </div>
             </div>
