--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@ permalink: /404.html
     }
 
     body {
-        background-image: url("img/404.png");
+        background-image: url("https://images.unsplash.com/photo-1521668576204-57ae3afee860?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80");
         background-size: cover;
         background-position: top;
         filter: grayscale(50%);
