--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container-fluid mx-3">
+        <div class="container-fluid mx-3 appearonload">
             <a class="navbar-brand js-scroll-trigger ml-1" href="#page-top"><img class="main-logo" src="img/favicon.png"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -97,7 +97,7 @@
 
     <!-- Header -->
     <header class="masthead">
-        <div class="container d-flex h-75 align-items-center pt-5">
+        <div class="container d-flex h-75 align-items-center pt-5 appearonload">
             <div class="mx-auto text-center">
                 <h1 class="mx-auto text-uppercase text-white">Akshant Jain</h1>
                 <div class="divider" style="background-color: transparent;"></div>
@@ -115,23 +115,18 @@
                     <p class="name text-white mb-2" style=" font-family: 'Source Sans Pro', sans-serif;">Hi! I'm Akshant Jain!</h2>
                     <span class="line mt-0 mb-4"></span>
                     <img src="img/my_image.jpg" class="headshot">
-                    <p class="text-white-50 mb-3 text-justify">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit tortor a lacus maximus, ac maximus purus
-                    eleifend. Praesent sagittis, purus nec auctor convallis, urna est rutrum augue, nec congue purus leo id ipsum. Integer
-                    in congue risus. Mauris sed nibh velit. Nam ut mauris dolor. Mauris efficitur dictum placerat. Donec non mi eu tortor
-                    fringilla cursus. Integer aliquam rhoncus sagittis. Phasellus condimentum scelerisque semper. Mauris at finibus dolor,
-                    in interdum metus. Suspendisse lacinia convallis posuere. Vivamus eu lorem et velit feugiat ultricies. Aenean at odio
-                    eget sem dictum sagittis. Nam congue suscipit tempus. Proin hendrerit rhoncus massa ut sodales. Aliquam in ipsum sed
-                    magna pellentesque hendrerit quis sit amet sapien.
-                    </p>
-                    <p class="text-white-50 mb-3 text-justify">
-                        Phasellus sollicitudin lectus id egestas lobortis. Proin bibendum porttitor odio ac luctus. Integer sit amet ullamcorper
-                    ex. Maecenas fermentum nunc massa, non gravida ipsum efficitur dignissim. Aenean iaculis risus ante, eu porta tellus
-                    iaculis fermentum. Praesent consequat est lectus, vel ultricies ipsum vehicula et. In tempus at felis ut accumsan.
-                    Nullam pellentesque orci in nunc sollicitudin, eu commodo felis fermentum. Nunc et vestibulum sapien, nec euismod nibh.
-                    Fusce interdum diam at aliquet pellentesque. Nulla tempor elit vel dolor blandit, eu feugiat urna cursus. Maecenas
-                    cursus finibus tellus ac congue. Cras luctus consequat enim, ac vehicula risus. Sed a nisl non velit semper placerat
-                    vitae ut neque.
+                    <p class="text-white-50 mb-3">
+                        I'm a fourth year student at University of Illinois at Chicago studying Computer Science along with minor in mathematics. I have
+                        experience developing and designing both web software and computer software, from simple basic programs to progressive and responsice web applications. 
+                        I love to create software to enhance user experience and solve real world problems in a creative ways.
+                        <br><br>
+                        I love learning new development languages to create user experiences with clean, efficient, and scalable code. I
+                        consider work an ongoing education, and I'm always looking for opportunities to work with those who are willing to share
+                        their knowledge as much as I want to learn. At the end of the day, my primary goal is to learn and help people with their
+                        problems in a virtual and creative way through my skills and knowledge.
+                        <br><br>
+                        I am also interested in learning Artificial Intelligence and Machine Learning so that I could find a way to develop programs in a much easier and
+                        productive manner.
                     </p>
                 </div>
             </div>
@@ -207,10 +202,11 @@
     <section id="experience" class="experience-section contents ">
         <div class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Experience <span style="font-size: 0.8rem;">What I Have learned</span></h1>
+            
             <div class="row">
-                <div class="wrapper mb-2 mt-1">
+                <div class="wrapper mt-1">
                     <div class="container each">
-                        <div class="row py-3 mx-3">
+                        <div class="row py-2 mx-3">
                             <div class="col-5">
                                 <div class="img college"></div>
                                 <h5 class="text-uppercase d-inline-block text-white">Education<span class="line" style="width: 80%;"></span></h5>
@@ -235,7 +231,7 @@
             <div class="row">
                 <div class="wrapper">
                     <div class="container each">
-                        <div class="row py-3 mx-3">
+                        <div class="row py-2 mx-3">
                             <div class="col-5">
                                 <div class="img course"></div>
                                 <h5 class="text-uppercase d-inline-block text-white">Coursework<span class="line"
@@ -263,7 +259,7 @@
                                 <h5 class="text-white mb-0">Coursera Online Courses</h5>
                                 <span class="line" style="width: 30%; height: 1px;"></span>
                                 <ul class="text-white-50" style="list-style-type: square;">
-                                    <li>Front-End Web Development </li>
+                                    <li>Front-End Web Development with React</li>
                                 </ul>
                             </div>
                         </div>
@@ -274,7 +270,7 @@
             <div class="row">
                 <div class="wrapper">
                         <div class="container each">
-                        <div class="row py-3 mx-3">
+                        <div class="row py-2 mx-3">
                             <div class="col-5">
                                 <div class="img connect"></div>
                                 <h5 class="text-uppercase d-inline-block text-white">Professional Affiliations<span class="line"
@@ -283,7 +279,7 @@
                             <div class="col-7 mt-1 connections">
                                 <h5 class="text-white mb-0">Association for Computing Machinery (ACM)</h5>
                                 <span class="line" style="width: 50%; height: 1px;"></span>
-                                <p class="text-white-50 mt-1 ml-1 mb-0">
+                                <p class="text-white-50 ml-1 mb-0">
                                     Member of ACM UIC and International since January 2020.
                                 </p>
                             </div>
@@ -328,7 +324,7 @@
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">COVID-19 Tracker</h4>
                             <p class="duration ml-3">April - May 2020</p>
                             <a href="https://github.com/Akshantjain/it202-big-project" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://akshantjain.github.io" target="_blank"><div class="img2 external"></div></a>
+                            <a href="http://akshantjain.github.io/it202-big-project/" target="_blank"><div class="img2 external"></div></a>
                         </div>
                         <div class="container project-description minimize">
                             <div class="description text-justify">
@@ -353,7 +349,7 @@
                         <div class="container project-description minimize">
                             <div class="description text-justify">
                                 <ul>
-                                    <li>This project is a part of <em>Computer Design Course</em> (CS 362) of UIC from <em>Fall 2019</em>
+                                    <li>The project was a part of <em>Computer Design Course</em> (CS 362) of UIC from <em>Fall 2019</em>
                                         Semester.
                                     </li>
                                     <li>This was a group project of three members. </li>
@@ -527,18 +523,20 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(6)">
-                        <div class="container">
-                            <div class="img folder ml-4 mr-4"></div>
-                            <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">More Projects</h4>
-                        </div>
-                        <div class="container project-description minimize">
-                            <div class="description text-justify">
-                                <ul>
-                                </ul>
+                    <a href="https://github.com/Akshantjain?tab=repositories" target="_blank">
+                        <div class="row container each pt-3 pb-2 px-5 clickable-section">
+                            <div class="container text-center">
+                                <div class="img folder ml-4 mr-3"></div>
+                                <h4 class="font-weight-light pl d-inline-block" style="margin: 0px;">More Projects</h4>
                             </div>
+                            <!-- <div class="container project-description minimize">
+                                                    <div class="description text-justify">
+                                                        <ul>
+                                                        </ul>
+                                                    </div>
+                                                </div> -->
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
