laptop layout update

--- a/index.html
+++ b/index.html
@@ -530,11 +530,11 @@
                                 <h4 class="font-weight-light pl d-inline-block" style="margin: 0px;">More Projects</h4>
                             </div>
                             <!-- <div class="container project-description minimize">
-                                                    <div class="description text-justify">
-                                                        <ul>
-                                                        </ul>
-                                                    </div>
-                                                </div> -->
+                                <div class="description text-justify">
+                                    <ul>
+                                    </ul>
+                                </div>
+                            </div> -->
                         </div>
                     </a>
                 </div>
@@ -543,7 +543,7 @@
     </section>
 
     <section id="resume">
-        <a class="block-btn" href="https://www.github.com/akshantjain" target="_blank"> <span class="text">View my full
+        <a class="block-btn" href="https://drive.google.com/file/d/18OM9oCFruBmdAovOkeMj5dj5D0y-SUPj/view" target="_blank"> <span class="text">View my full
                 resume</span>
             <img class="icon" src="img/download.png" alt="download resume">
         </a>
@@ -580,7 +580,7 @@
                             <h4 class="text-uppercase m-0">GitHub</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                               <a href="https://github.com/Akshantjain">github.com/Akshantjain</a>
+                               <a href="https://github.com/Akshantjain" target="_blank">github.com/Akshantjain</a>
                             </div>
                         </div>
                     </div>
@@ -614,7 +614,7 @@
                             <h4 class="text-uppercase mt-1">Gmail</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="mailto:akshant.jain2@gmail.com">akshant.jain2@gmail.com</a>
+                                <a href="mailto:akshant.jain2@gmail.com" target="_blank">akshant.jain2@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -627,7 +627,7 @@
                             <h4 class="text-uppercase m-0">LinkedIn</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="linkedin.com/in/akshantjain/">linkedin.com/in/akshantjain/</a>
+                                <a href="https://www.linkedin.com/in/akshantjain/" target="_blank" >linkedin.com/in/akshantjain/</a>
                             </div>
                         </div>
                     </div>
@@ -636,7 +636,7 @@
             </div>
 
             <div class="social d-flex justify-content-center">
-                <a href="#" class="mx-2 google">
+                <a href="mailto:akshant.jain2@gmail.com" target="_blank" class="mx-2 google">
                     <!-- The Google logo code has been taken from "developers.google.com" website using Chrome Dev Tools -->
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="15px" height="16px"viewBox="0 0 48 48">
                         <g>
@@ -658,16 +658,16 @@
                     <!-- The Google Logo code from "developers..com ends here" -->
                 </a>
 
-                <a href="#" class="mx-2 linkedin">
+                <a href="https://www.linkedin.com/in/akshantjain/" target="_blank" class="mx-2 linkedin">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="#" class="mx-2 github">
+                <a href="https://github.com/Akshantjain" target="_blank" class="mx-2 github">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="mx-2 fb">
+                <a href="https://www.facebook.com/akshant.jain" target="_blank" class="mx-2 fb">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="#" class="mx-2 whatsapp">
+                <a href="https://wa.me/13125610879?text=I'm%20interested%20in%20developing%20a%20site%20by%20you." target="_blank" class="mx-2 whatsapp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
@@ -677,7 +677,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center contents text-white-50" style="padding-top: 30px;">
         <div class="container">
-            <a class="text-white-50" href="http://bit.ly/2VmnVhn" target="_blank">Re-Designed by Akshant Jain <br>
+            <a class="text-white-50" href="https://github.com/Akshantjain/Akshantjain.github.io/tree/master" target="_blank">Re-Designed by Akshant Jain <br>
             Copyright &copy; Akshant Jain 2020</a>
         </div>
     </footer>
