--- a/404.html
+++ b/404.html
@@ -19,12 +19,18 @@ permalink: /404.html
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+        <link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
+        <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
     </section>
 </head>
 
 <style>
-    html,
-    body {
+    html,body {
         height: 100%;
     }
 
@@ -50,6 +56,9 @@ permalink: /404.html
         min-height: 500px;
         font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
     }
+
+    
+
 </style>
 
 <body class="d-flex flex-column">
@@ -60,10 +69,9 @@ permalink: /404.html
                 <div class="col-12 text-center">
                     <p style="font-size: 8rem;" class="font-weight-light mb-0">404</p>
                     <div class="alert" role="alert">
-                        <span class="text-uppercase mb-2" style="font-size: 2rem;">Page Not Found!</span>
+                        <span class="text-uppercase mb-2" style="font-size: 2rem;">Page Not Found!</span> 
                         <br><br>
-                        <span style="font-size: 1.2rem;">Visit my <a href="https://akshantjain.github.io" class="alert-link">homepage</a>. Give it a
-                            click if you like.</span>
+                        <span style="font-size: 1.2rem;">Visit my <a href="https://akshantjain.github.io" class="alert-link">homepage</a>. Give it a click if you like.</span>
                     </div>
                 </div>
             </div>
@@ -77,7 +85,8 @@ permalink: /404.html
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
-        integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
+        integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" 
+        crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
