--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
 
 
     <!-- Custom scripts for this template -->
-    <script src="js/coming-soon.min.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
