--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container-fluid mx-3 appearonload">
-            <a class="navbar-brand js-scroll-trigger ml-1" href="#page-top"><img class="main-logo" src="img/favicon.png"></a>
+            <a class="navbar-brand js-scroll-trigger ml-1" href="#page-top"><img class="main-logo" src="img/favicon2.png"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -673,6 +673,14 @@
             </div>
         </div>
     </div>
+    
+    <!-- Footer -->
+    <footer class="bg-black small text-center contents text-white-50" style="padding-top: 30px;">
+        <div class="container">
+            <a class="text-white-50" href="http://bit.ly/2VmnVhn" target="_blank">Re-Designed by Akshant Jain <br>
+            Copyright &copy; Akshant Jain 2020</a>
+        </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
