--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
                             <div class="img webapp ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">COVID-19 Tracker</h4>
                             <p class="duration ml-3">April - May 2020</p>
-                            <a href="https://github.com/Akshantjain/it202-big-project" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="http://akshantjain.github.io/it202-big-project/" target="_blank"><div class="img2 external"></div></a>
+                            <a href="https://github.com/Akshantjain/it202-project4" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="http://akshantjain.github.io/it202-project4/" target="_blank"><div class="img2 external"></div></a>
                         </div>
                         <div class="container project-description minimize">
                             <div class="description text-justify">
@@ -333,7 +333,6 @@
                                     <li>The main idea of the project was provide the visitors with the number of cases for each country.</li>
                                     <li>The data provides the data with graphical visualization to the visitors.</li>
                                     <li>The app/website allows visitor to filter countries.</li>
-                                    <li>The project is expected to be launched by the start of May 2020.</li>
                                 </ul>
                             </div>
                         </div>
